community.css
main {
  display: flex;
  flex-direction: column;
  margin-top: 60px;
}

.sub-header {
  font-size: 2.5rem;
  margin: 1.4rem 0;
  text-align: center;
}

.main-header {
  align-self: center;
  width: 111%;
  height: 100px;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3.2em;
}

.grid {
  display: grid;
  gap: 20px;
  background-color: #353535;
  padding: 20px;
  border-radius: 20px;
  grid-template-columns: 1fr 1fr;
  margin-bottom: 40px;
}

.button {
  display: flex;
  align-items: center;
  background: rgb(255, 255, 255);
  padding: 0;
}

.button h3 {
  display: inline-block;
  margin: 5px;
  font-size: 2.9rem;
  font-weight: 900;
  margin: auto;
  padding: 10px;
  white-space: nowrap;
}

.button img {
  display: inline-block;
}

.icon {
  background-color: rgb(224, 224, 224);
  height: 100%;
  width: 100px;
  padding: 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px 0 0 10px;
  transition: 300ms;
}

.button:hover > .icon {
  background-color: #333;
  width: 70%;
  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
}

.discord {
  height: 4.4rem;
}

.youtube {
  height: 3.1rem;
}

.twitter {
  height: 3.1rem;
}

.reddit {
  height: 4rem;
}

.instagram {
  height: 4rem;
}

.tiktok {
  height: 5rem;
}

.checkbox {
  height: 5rem;
}

@media only screen and (max-width: 1200px) {
  .grid {
    grid-template-columns: 1fr;
  }
}

